@@ -34,6 +34,8 @@
 
 namespace gui2{
 
+unsigned twindow::sunset_ = 0;
+
 namespace {
 #ifdef DEBUG_WINDOW_LAYOUT_GRAPHS
 	const unsigned MANUAL = tdebug_layout_graph::MANUAL;
@@ -292,8 +294,18 @@ void twindow::draw()
 	}
 
 	if(dirty_list_.empty()) {
-		if(preferences::use_colour_cursors()) {
+		if(preferences::use_colour_cursors() || sunset_) {
 			surface frame_buffer = get_video_surface();
+
+			static unsigned i = 0;
+			if(++i % sunset_== 0) {
+				SDL_Rect r = {0, 0, frame_buffer->w, frame_buffer->h };
+				const Uint32 color =
+						SDL_MapRGBA(frame_buffer->format,0,0,0,255);
+
+				fill_rect_alpha(r, color, 1, frame_buffer);
+				update_rect(r);
+			}
 
 			cursor::draw(frame_buffer);
 			video_.flip();
