@@ -16,6 +16,8 @@ Version 1.5.7+svn:
    * the animate_unit action can now animate multiple units
    * the animate_unit action can now change the direction the unit is facing
      with a SLF
+ * Miscellaneous and bug fixes:
+   * Added the sunset feature to the new dialogs.
 
 Version 1.5.7:
  * Campaigns:
